@@ -22,3 +22,5 @@ Increase Hardy regeneration strength. (it got nerfed too hard)
 Gymgoer removes Exercise Fatigue.
 Don't trigger Butterfingers if player has nothing in their hands.
 Butterfingers triggers less while walking and more while Running or Sprinting.
+Add new trait: Battering Ram
+Fix Bouncer pushing enemies back up from being knocked down.
